# inv-addon

./: .gitignore  CLAUDE.md  Dockerfile  config.json  repository.json  test.db  test_catalog.db  test_import_flow.db
app/: app.py
recipe-assistant/backend/: .gitignore  alembic.ini  pyproject.toml  test.db
recipe-assistant/backend/alembic/: env.py
recipe-assistant/backend/alembic/versions/: 001_initial_schema.py  002_add_persons.py  003_add_picnic_tables.py  004_add_tracked_products.py  005_add_picnic_id_index.py  006_add_image_url_to_inventory.py  007_relax_target_gte_min.py  008_drop_shopping_list.py  009_add_is_pinned.py
recipe-assistant/backend/app/: config.py  database.py  main.py
recipe-assistant/backend/app/models/: __init__.py  chat.py  inventory.py  log.py  person.py  picnic.py  tracked_product.py
recipe-assistant/backend/app/routers/: assistant.py  dashboard.py  inventory.py  persons.py  picnic.py  storage.py  tracked_products.py
recipe-assistant/backend/app/schemas/: chat.py  dashboard.py  inventory.py  person.py  picnic.py  recipe.py  tracked_product.py
recipe-assistant/backend/app/services/: ai_chat.py  ai_images.py  ai_recipes.py  barcode.py  dashboard.py  restock.py  tracked_products.py
recipe-assistant/backend/tests/: conftest.py  test_assistant.py  test_barcode.py  test_config.py  test_dashboard_router.py  test_dashboard_service.py  test_inventory.py  test_inventory_restock.py  test_picnic_login_router.py  test_picnic_router.py  test_promote_barcode.py  test_storage.py  test_tracked_product_schemas.py  test_tracked_products_router.py
(+113 files in other folders)
